adjust img size

--- a/myadmin/templates/profile.html
+++ b/myadmin/templates/profile.html
@@ -17,7 +17,7 @@
         <p class="text-3xl pt-2 pl-6 font-thin">{{ role }}</p>
     </div>
     <div class="w-full z-10 -translate-y-64 relative flex justify-center">
-        <img src="../../static/solar-profile.png" alt="solar-profile" class="w-[1550px] h-64 rounded-b-3xl">
+        <img src="../../static/solar-profile.png" alt="solar-profile" class="w-full h-64 rounded-b-3xl">
     </div> 
     <div class="avatar flex justify-self-end">
         <form method="POST" action="{% url 'upload_profile_image' %}" enctype="multipart/form-data">
