--- a/myadmin/templates/reports.html
+++ b/myadmin/templates/reports.html
@@ -4,9 +4,13 @@
     <div class="flex flex-col">
         <div class="text-xl font-bold">Report</div>
     </div>
-    <div>
+    {% comment %} <div>
         <input type="text" placeholder="Search" class="input input-bordered w-24 md:w-auto" />
-    </div>
+    </div> {% endcomment %}
+    <form method="get">
+        <input type="text" name="q" placeholder="Search..." value="{{ query }}">
+        <button type="submit">Search</button>
+    </form>
 </div>
 <div class="overflow-x-auto overflow-y-auto mt-8" style="max-height: calc(100% - 80px)">
     <table class="table">
@@ -60,7 +64,7 @@
     <div class="flex justify-center mt-4">
         <div class="join">
         {% if page_obj.has_previous %}
-        <a href="?page={{ page_obj.previous_page_number }}" class="join-item btn btn-sm">&lt;</a>
+        <a href="?q={{ query }}&page={{ page_obj.previous_page_number }}" class="join-item btn btn-sm">&lt;</a>
         {% else %}
         <button class="join-item btn btn-sm btn-disabled">&lt;</button>
         {% endif %}
@@ -78,7 +82,7 @@
         {% endfor %}
 
         {% if page_obj.has_next %}
-        <a href="?page={{ page_obj.next_page_number }}" class="join-item btn btn-sm">&gt;</a>
+        <a href="?q={{ query }}&page={{ page_obj.next_page_number }}" class="join-item btn btn-sm">&gt;</a>
         {% else %}
         <button class="join-item btn btn-sm btn-disabled">&gt;</button>
         {% endif %}
