--- a/myadmin/templates/upload_report.html
+++ b/myadmin/templates/upload_report.html
@@ -1,16 +1,22 @@
 {% extends 'base.html' %} {% block title %}Upload - Report{% endblock%}
-{% block heading %}Upload Report CSV{% endblock %} 
+{% block heading %}Report Upload{% endblock %} 
 {% block content %}
-
-<h2>Upload CSV File</h2>
-{% if error %}
+<div class="flex flex-row justify-between">
+    <div class="flex flex-col">
+        <div class="text-xl font-bold">Report Upload for report id: {{report.id}}</div>
+    </div>
+    <div class="flex flex-col">
+        <div class="text-xl font-bold">powerplant: {{powerplant.name}}</div>
+    </div>
+</div>
+<br>
+    {% if error %}
     <p style="color: red;">{{ error }}</p>
-{% endif %}
-<form method="post" enctype="multipart/form-data">
+    {% endif %}
+    <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Upload</button>
-</form>
-
+    </form>
 
 {% endblock content %}
