upload_report page styling and guidance

--- a/myadmin/templates/create_report.html
+++ b/myadmin/templates/create_report.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} {% block title %}Admin - Users Management{% endblock%}
-{% block heading %}Reports{% endblock %} {% block content %}
+{% block heading %}Create Report{% endblock %} {% block content %}
 <div class="text-xl font-bold">Create Report</div>
 <br>
 <form method="POST">
