fix bug on create report

--- a/myadmin/templates/create_report.html
+++ b/myadmin/templates/create_report.html
@@ -12,6 +12,6 @@
     {{ form.energy_generated.label_tag }}
     {{ form.energy_generated }}
   </div>
-  <button type="submit" class="btn btn-primary">Submit Report</button>
+  <button type="submit" class="btn btn-primary">Create Report</button>
 </form>
 {% endblock%}
